--- a/SpringWeb_Module5/src/main/resources/spring-frontend/books/popular.html
+++ b/SpringWeb_Module5/src/main/resources/spring-frontend/books/popular.html
@@ -64,10 +64,10 @@
               <div class="Card-content">
                 <strong class="Card-title"><a href="#" th:text="${book.title}">Техника</a>
                 </strong>
-                <div class="Card-description" th:text="${book.author}">Кондратенко Александр Петрович
+                <div class="Card-description" th:text="${book.author.name}">Кондратенко Александр Петрович
                 </div>
-                <div class="Card-cost"><span class="Card-priceOld" th:text="${book.priceOld}">₽300.00</span>
-                  <span class="Card-price" th:text="${book.price}">₽190.00</span>
+                <div class="Card-cost"><span class="Card-priceOld" th:text="${book.price}">₽300.00</span>
+                  <span class="Card-price" th:text="${book.price}-${book.discount}">₽190.00</span>
                 </div>
               </div>
             </div>
