--- a/SpringWeb_Module5/src/main/resources/spring-frontend/index.html
+++ b/SpringWeb_Module5/src/main/resources/spring-frontend/index.html
@@ -151,12 +151,12 @@ p.error-browser
                                         <strong class="Card-title"><a href="#"
                                                                       th:text="${book.title}">Техника</a>
                                         </strong>
-                                        <div class="Card-description" th:text="${book.author}">Кондратенко Валерий
+                                        <div class="Card-description" th:text="${book.author.name}">Кондратенко Валерий
                                             Петрович
                                         </div>
                                         <div class="Card-cost">
-                                            <span class="Card-priceOld" th:text="${book.priceOld}">₽300.00</span>
-                                            <span class="Card-price" th:text="${book.price}">₽190.00</span>
+                                            <span class="Card-priceOld" th:text="${book.price}">₽300.00</span>
+                                            <span class="Card-price" th:text="${book.price}-${book.discount}">₽190.00</span>
                                         </div>
                                     </div>
                                 </div>
