Задание 6.7 2.4 Книги по genres page - метод в сервайс который берет все genres и переводит их в GenreDto раскидывая в мапу в потом в обьект модифиицирую обьекты и вычисляет колиство книг   но лучше хранить колиство книг в базе в таблице genres потому что чтобы вычислить количество каждого жанра приходится запрашивать все книги жанра из БД чтобы   посчитать их количетсво   В GenreDto GenreEntity раскидывается чрез MapperGenreDto статический класс, чтобы не хранить маппинг в dto - запрос рекурсией всех GenreEntity в дерево под id в GenreService   потом после того как получили List<GenreEntity> запрашиваем книги в BookService уже Pageble лист возвращаем - страница со slugs на которую можно перейти с любого жанра, причем в slugs вычисляются наследники докидываются в slugs и динамически подставляются в endpoint   и потом докидываются в таймлив для динамической навигации по выбранному жанру и наследниками   <li class="breadcrumbs-item" th:each="path,iter : ${pathVars}">     <a th:href="'/genres/' + ${#strings.listJoin(pathVars.subList(0, iter.index+1), '/')}"        th:text="${pathVars.get(iter.index)}"></a>   </li> - thymeleaf для genres на странице genres/index сделан через рекурсию фрагмент   фрагмент:   <div th:fragment="fragmentTag(node)" th:unless="${#lists.isEmpty(node.getChilds())}">   <div th:each="ch : ${node.getChilds()}">     <span>wtf</span>     <div th:replace="this :: fragmentTag(node=${ch})">     </div>   </div>  </div>  на странице  <div th:replace="fragments/tag_fragment.html :: fragmentTag(node=${genres})">  </div> - в genre entity сделал unique неск полей, иначе ексепшен при запроосе из service.findbySlug и находит два

--- a/src/main/resources/spring-frontend/books/popular.html
+++ b/src/main/resources/spring-frontend/books/popular.html
@@ -58,7 +58,8 @@
             </h1>
           </div>
           <div class="Cards Cards_refresh" >
-            <div class="Card" th:each="book:${popularBooks}" th:insert="~{fragments/book_card_fragment ::bookFragment}"></div>
+            <div class="Card" th:each="book:${popularBooks}"
+                 th:insert="~{fragments/book_card_fragment ::bookFragment(book=${book}, class='Card-fragment')}"></div>
             <div class="Cards-footer Cards-footer_center">
               <a class="btn btn_primary" href="#" data-refreshshow="popular" data-refreshoffset="0" data-refreshlimit="10">Показать еще</a>
             </div>
