--- a/src/main/resources/spring-frontend/books/recent.html
+++ b/src/main/resources/spring-frontend/books/recent.html
@@ -71,7 +71,8 @@
           </div>
           <div class="Cards Cards_refresh">
             
-            <div class="Card" th:each="book:${newBooks}" th:insert="~{fragments/book_card_fragment ::bookFragment}"></div>
+            <div class="Card" th:each="book:${newBooks}"
+                 th:insert="~{fragments/book_card_fragment ::bookFragment(book=${book}, class='Card-fragment')}"></div>
 
             <div class="Cards-footer Cards-footer_center">
               <a class="btn btn_primary"
