--- a/src/main/resources/spring-frontend/index.html
+++ b/src/main/resources/spring-frontend/index.html
@@ -53,7 +53,8 @@ p.error-browser
           <div class="Slider-box Cards" data-load="recommended" data-loadoffset="0" data-loadlimit="6">
             <div class="Slider-item" th:each="book : ${recommendedBooks}">
               <div class="Slider-content">
-                <div class="Card" th:insert="~{fragments/book_card_fragment ::bookFragment}"></div>
+                <div class="Card"
+                     th:insert="~{fragments/book_card_fragment ::bookFragment(book=${book}, class='Card-fragment')}"></div>
               </div>
             </div>
           </div>
@@ -74,7 +75,8 @@ p.error-browser
           <div class="Slider-box Cards" data-load="recent" data-loadoffset="0" data-loadlimit="6">
             <div class="Slider-item" th:each="book : ${newBooks}">
               <div class="Slider-content">
-                <div class="Card" th:insert="~{fragments/book_card_fragment ::bookFragment}"></div>
+                <div class="Card"
+                     th:insert="~{fragments/book_card_fragment ::bookFragment(book=${book}, class='Card-fragment')}"></div>
               </div>
             </div>
           </div>
@@ -95,8 +97,9 @@ p.error-browser
           <div class="Slider-box Cards" data-load="popular" data-loadoffset="0" data-loadlimit="6">
             <div class="Slider-item" th:each="book: ${popularBooks}">
               <div class="Slider-content">
-                <!--                  <div th:replace="~{fragments/book_card_fragment ::bookFragment}"></div>-->
-                <div class="Card" th:insert="~{fragments/book_card_fragment ::bookFragment}"></div>
+                <div class="Card"
+                     th:insert="~{fragments/book_card_fragment ::bookFragment(book=${book}, class='Card-fragment')}">
+                </div>
               </div>
             </div>
           </div>
