--- a/src/main/resources/spring-frontend/genres/slug.html
+++ b/src/main/resources/spring-frontend/genres/slug.html
@@ -55,7 +55,7 @@
           </li>
         </ul>
         <header class="Middle-header">
-          <h1 class="Middle-title" th:text="${genre.getName()}">Детективы
+          <h1 class="Middle-title" th:text="${genres.get(genres.size()-1).getName()}">Детективы
           </h1>
         </header>
         <div class="Section">
