Задание 6.7.3.Реализация страницы автора

--- a/src/main/resources/spring-frontend/genres/index.html
+++ b/src/main/resources/spring-frontend/genres/index.html
@@ -9,7 +9,7 @@
 <html class="ie9" lang="ru">
 <![endif]-->
 <!--[if gt IE 9]><!-->
-<html lang="ru"> <!--<![endif]-->
+<html lang="ru"> </html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
   <title>Тут название страницы написать</title>
