--- a/SpringWeb_Module6/src/main/resources/spring-frontend/books/slugmy.html
+++ b/SpringWeb_Module6/src/main/resources/spring-frontend/books/slugmy.html
@@ -1,16 +1,15 @@
 
 <!--END-->
 <!--END--><!DOCTYPE html><!--[if IE 7]>
-<html class="ie7" lang="ru" xmlns="http://www.w3.org/1999/xhtml">
+<html class="ie7" lang="ru">
 <![endif]-->
 <!--[if IE 8]>
-<html class="ie8" lang="ru" xmlns="http://www.w3.org/1999/xhtml">
+<html class="ie8" lang="ru">
 <![endif]-->
 <!--[if IE 9]>
-<html class="ie9" lang="ru" xmlns="http://www.w3.org/1999/xhtml">
+<html class="ie9" lang="ru">
 <![endif]-->
-<!--[if gt IE 9]><!-->
-<html lang="ru" xmlns:th="http://www.thymeleaf.org"> <!--<![endif]-->
+<!--[if gt IE 9]><!--> <html lang="ru"> <!--<![endif]-->
 <head>
   <title>Тут название страницы написать</title>
   <meta name="description" content="Описание страницы">
@@ -19,7 +18,7 @@
   <!--meta( http-equiv="cache-control" content="no-cache")-->
   <!--meta( http-equiv="expires" content="0")-->
   <!--link(rel="preload" href="assets/css/extra.min.css?v=" + version as="style" crossorigin="anonymous")-->
-  <link href="favicon.ico" rel="shortcut icon">
+  <link href="/favicon.ico" rel="shortcut icon">
   <link rel="preload" href="/assets/fonts/Montserrat/Montserrat-SemiBold.woff2" as="font" crossorigin="anonymous">
   <link rel="preload" href="/assets/fonts/Montserrat/Montserrat-Light.woff2" as="font" crossorigin="anonymous">
   <link rel="preload" href="/assets/fonts/Montserrat/Montserrat-Medium.woff2" as="font" crossorigin="anonymous">
