--- a/SpringWeb_Module6/src/main/resources/spring-frontend/books/popular.html
+++ b/SpringWeb_Module6/src/main/resources/spring-frontend/books/popular.html
@@ -1,16 +1,16 @@
 
 <!--END-->
 <!--END--><!DOCTYPE html><!--[if IE 7]>
-<html class="ie7" lang="ru" xmlns="http://www.w3.org/1999/xhtml">
+<html class="ie7" lang="ru">
 <![endif]-->
 <!--[if IE 8]>
-<html class="ie8" lang="ru" xmlns="http://www.w3.org/1999/xhtml">
+<html class="ie8" lang="ru">
 <![endif]-->
 <!--[if IE 9]>
-<html class="ie9" lang="ru" xmlns="http://www.w3.org/1999/xhtml">
+<html class="ie9" lang="ru">
 <![endif]-->
-<!--[if gt IE 9]><!-->
-<html lang="ru" xmlns:th="http://www.thymeleaf.org"> <!--<![endif]-->
+<!--[if gt IE 9]><!--> <html lang="ru"> <!--<![endif]-->
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
   <title>Тут название страницы написать</title>
   <meta name="description" content="Описание страницы">
@@ -19,7 +19,7 @@
   <!--meta( http-equiv="cache-control" content="no-cache")-->
   <!--meta( http-equiv="expires" content="0")-->
   <!--link(rel="preload" href="assets/css/extra.min.css?v=" + version as="style" crossorigin="anonymous")-->
-  <link href="favicon.ico" rel="shortcut icon">
+  <link href="/favicon.ico" rel="shortcut icon">
   <link rel="preload" href="/assets/fonts/Montserrat/Montserrat-SemiBold.woff2" as="font" crossorigin="anonymous">
   <link rel="preload" href="/assets/fonts/Montserrat/Montserrat-Light.woff2" as="font" crossorigin="anonymous">
   <link rel="preload" href="/assets/fonts/Montserrat/Montserrat-Medium.woff2" as="font" crossorigin="anonymous">
@@ -40,7 +40,7 @@
           | браузера здесь&nbsp;
       | для правильного отображения сайта.
   -->
-  <div th:replace="~{fragments/header_fragment :: headFragment}"></div>
+  <header th:replace="~{fragments/header_fragment :: headFragment}"></header>
   <div class="Middle">
     <div class="wrap">
       <main class="Middle-main">
@@ -57,27 +57,17 @@
             <h1 class="Section-title">Популярное
             </h1>
           </div>
-          <div class="Cards Cards_refresh">
-            <div class="Card" th:each="book : ${popularBooks}">
-              <div class="Card-picture"><a href="#"><img src="/assets/img/content/main/card.jpg" alt="card.jpg"/></a>
-              </div>
-              <div class="Card-content">
-                <strong class="Card-title"><a href="#" th:text="${book.title}">Техника</a>
-                </strong>
-                <div class="Card-description" th:text="${book.author.name}">Кондратенко Александр Петрович
-                </div>
-                <div class="Card-cost"><span class="Card-priceOld" th:text="${book.price}">₽300.00</span>
-                  <span class="Card-price" th:text="${book.price}-${book.discount}">₽190.00</span>
-                </div>
-              </div>
-            </div>
-            <div class="Cards-footer Cards-footer_center"><a class="btn btn_primary" href="#" data-refreshshow="popular" data-refreshoffset="20" data-refreshlimit="20">Показать еще</a>
+          <div class="Cards Cards_refresh" >
+            <div class="Card" th:each="book:${popularBooks}"
+                 th:insert="~{fragments/book_card_fragment ::bookFragment(book=${book}, class='Card-fragment')}"></div>
+            <div class="Cards-footer Cards-footer_center">
+              <a class="btn btn_primary" href="#" data-refreshshow="popular" data-refreshoffset="0" data-refreshlimit="10">Показать еще</a>
             </div>
           </div>
         </div>
       </main>
     </div>
   </div>
-  <div th:replace="~{fragments/footer_fragment :: footFragment}"></div>
+  <footer th:replace="~{fragments/footer_fragment :: footFragment}"></footer>
   <script src="/assets/plg/jQuery/jquery-3.5.1.min.js"></script>
 </body></html>
