--- a/SpringWeb_Module7/src/main/resources/spring-frontend/books/slug.html
+++ b/SpringWeb_Module7/src/main/resources/spring-frontend/books/slug.html
@@ -9,8 +9,7 @@
 <!--[if IE 9]>
 <html class="ie9" lang="ru">
 <![endif]-->
-<!--[if gt IE 9]><!-->
-<html lang="ru" xmlns:th="http://www.thymeleaf.org"> <!--<![endif]-->
+<!--[if gt IE 9]><!--> <html lang="ru"> <!--<![endif]-->
 <head>
   <title>Тут название страницы написать</title>
   <meta name="description" content="Описание страницы">
@@ -19,17 +18,14 @@
   <!--meta( http-equiv="cache-control" content="no-cache")-->
   <!--meta( http-equiv="expires" content="0")-->
   <!--link(rel="preload" href="assets/css/extra.min.css?v=" + version as="style" crossorigin="anonymous")-->
-  <link href="favicon.ico" rel="shortcut icon">
+  <link href="/favicon.ico" rel="shortcut icon">
   <link rel="preload" href="/assets/fonts/Montserrat/Montserrat-SemiBold.woff2" as="font" crossorigin="anonymous">
   <link rel="preload" href="/assets/fonts/Montserrat/Montserrat-Light.woff2" as="font" crossorigin="anonymous">
   <link rel="preload" href="/assets/fonts/Montserrat/Montserrat-Medium.woff2" as="font" crossorigin="anonymous">
   <link rel="preload" href="/assets/fonts/Montserrat/Montserrat-ExtraBold.woff2" as="font" crossorigin="anonymous">
   <link rel="stylesheet" href="/assets/css/fonts.min.css?v=87821122">
   <link rel="stylesheet" href="/assets/css/basic.min.css?v=87821122">
-  <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
-  <link rel="stylesheet" href="/assets/css/extra.min.css?v=87821122">
-  <link rel="stylesheet" href="/assets/css/DownloadBookWindowStyle.css">
-  <!--[if lt IE 9]>
+  <link rel="stylesheet" href="/assets/css/extra.min.css?v=87821122"><!--[if lt IE 9]>
   <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
   <script defer src="/assets/js/scripts.min.js?v=87821122"></script>
 </head>
@@ -103,27 +99,20 @@
           </li>
           <li class="breadcrumbs-item"><a href="/genres/index.html">Книги</a>
           </li>
-          <li class="breadcrumbs-item breadcrumbs-item_current" th:text="${slugBook.title}"><span>Мара и морок</span>
+          <li class="breadcrumbs-item breadcrumbs-item_current"><span>Мара и морок</span>
           </li>
         </ul>
         <div class="Product">
           <div class="ProductCard">
             <div class="ProductCard-look">
-              <form id="imgForm" method="POST" enctype="multipart/form-data" action="#"
-              th:action="${'/books/+slugBook.slug'+'/img/save'}" >
-                <div class="ProductCard-photo" id="uploadbutton"><img th:src="${slugBook.image}"
-                                                                      src="/assets/img/content/main/card.jpg"
-                                                                      alt="card.jpg"/>
-                </div>
-                <input type="file" name="file" id="dialog" style="display: none" accept="image/*"/>
-              </form>
+              <div class="ProductCard-photo"><img src="/assets/img/content/main/card.jpg" alt="card.jpg"/>
+              </div>
             </div>
             <div class="ProductCard-desc">
               <div class="ProductCard-header">
-                <h1 class="ProductCard-title" th:text="${slugBook.title}>Мара и морок
+                <h1 class="ProductCard-title">Мара и морок
                 </h1>
-                <div class="ProductCard-author"><span class="ProductCard-titleProp">Автор:</span>&#32;<a href="#"
-                                                                                                         th:text="${slugBook.author.toString()}>Лия Арден</a>
+                <div class="ProductCard-author"><span class="ProductCard-titleProp">Автор:</span>&#32;<a href="#">Лия Арден</a>
                 </div>
                 <div class="ProductCard-rating"><span class="ProductCard-titleProp">Рейтинг:</span>
                   <button class="trigger trigger_dropdown" type="button">
@@ -393,7 +382,7 @@
                 </div>
                 <div class="ProductCard-tags"><span class="ProductCard-titleProp">Тэги:</span><a href="/tags/">Современные</a>,&#32;<a href="/tags/">Психологическая проза</a>
                 </div>
-                <div class="ProductCard-cost"><span class="ProductCard-titleProp" th:text="${slugBook.priceOld}">Цена:</span><span class="ProductCard-priceOld">₽300</span><span class="ProductCard-price" th:text="${slugBook.dicsountPrice()}">₽180</span>
+                <div class="ProductCard-cost"><span class="ProductCard-titleProp">Цена:</span><span class="ProductCard-priceOld">₽300</span><span class="ProductCard-price">₽180</span>
                 </div>
                 <!--+div.-info
                 //+div.-cost
@@ -405,7 +394,7 @@
                 -->
               </div>
               <div class="ProductCard-text">
-                <p th:text="${slugBook.description}>Таких, как я, называют Марами - отмеченными самой богиней смерти Мораной. Когда-то у меня и моих шести сестер был свой путь. Тогда люди нас уважали и просили о милосердии. Они приносили нам подношения и молились нам. Но 200 лет назад все изменилось, когда принц Серата осмелился поднять руку на одну из нас. Я пыталась отомстить, но погибли мы все. Теперь правители Аракена, погрязшие в длительной войне со своим соседом Сератом, решили вернуть меня к жизни. Дать второй шанс на месть и свободу, привязав меня к тому, против кого я никогда не пойду. Таких, как он, называют Морок, и их боятся абсолютно все.
+                <p>Таких, как я, называют Марами - отмеченными самой богиней смерти Мораной. Когда-то у меня и моих шести сестер был свой путь. Тогда люди нас уважали и просили о милосердии. Они приносили нам подношения и молились нам. Но 200 лет назад все изменилось, когда принц Серата осмелился поднять руку на одну из нас. Я пыталась отомстить, но погибли мы все. Теперь правители Аракена, погрязшие в длительной войне со своим соседом Сератом, решили вернуть меня к жизни. Дать второй шанс на месть и свободу, привязав меня к тому, против кого я никогда не пойду. Таких, как он, называют Морок, и их боятся абсолютно все.
                 </p>
               </div>
               <div class="ProductCard-cart">
@@ -416,11 +405,7 @@
                   </button>
                 </div>
                 <div class="ProductCard-cartElement">
-                  <button class="btn btn_primary btn_outline" data-sendstatus="CART"
-                          data-bookid="[1111]" th:attr="data-bookid = ${slugBook.slug}" data-btntype="check" data-btnradio="buyblock"
-                          data-check="false" data-alttext="В корзине"><span class="btn-icon">
-                    <img src="/assets/img/icons/shopping-basket.svg" alt="shopping-basket.svg"/>
-                  </span><span class="btn-content">Купить</span>
+                  <button class="btn btn_primary btn_outline" data-sendstatus="CART" data-bookid="[1111]" data-btntype="check" data-btnradio="buyblock" data-check="false" data-alttext="В корзине"><span class="btn-icon"><img src="/assets/img/icons/shopping-basket.svg" alt="shopping-basket.svg"/></span><span class="btn-content">Купить</span>
                   </button>
                 </div>
               </div>
@@ -430,26 +415,10 @@
                 <div class="ProductCard-cartElement"><a class="btn btn_primary btn_outline" href="#"><span class="btn-icon"><img src="/assets/img/icons/download.svg" alt="download.svg"/></span><span class="btn-content">Скачать</span></a>
                 </div>
                 <div class="ProductCard-cartElement">
-                  <button class="btn btn_primary btn_outline"
-                          data-sendstatus="ARCHIVED" data-bookid="[1111]"
-                          data-btntype="check" data-btnradio="buyblock"
-                          data-check="false" data-alttext="Вернуть из архива">
-                    <span class="btn-icon"><img src="/assets/img/icons/archive.svg"
-                                                alt="archive.svg"/></span><span class="btn-content">В архив</span>
+                  <button class="btn btn_primary btn_outline" data-sendstatus="ARCHIVED" data-bookid="[1111]" data-btntype="check" data-btnradio="buyblock" data-check="false" data-alttext="Вернуть из архива"><span class="btn-icon"><img src="/assets/img/icons/archive.svg" alt="archive.svg"/></span><span class="btn-content">В архив</span>
                   </button>
                 </div>
               </div>
-
-            <div id="myPopup">
-              <p>Ссылки для скачивания</p>
-              <div th:each="bookFile : ${slugBook.getBookFileList()}">
-                <a href="#" th:href="${'/books/download/' + bookFile.hash}"
-                   th:text="${bookFile.getBookFileExtensionString()}"></a>
-              </div>
-              <span id="myPopup__close" class="close">X</span>
-
-            </div>
-            <div id="myOverlay"></div>
               <!--+div.-cart-->
               <!--    //+div.-cartElement.-cartElement_amount-->
               <!--    //    +Amount._product-->
@@ -654,12 +623,6 @@
       <div class="wrap">© 2016 Bookshop Pty Ltd. ALL RIGHTS RESERVED
       </div>
     </div>
-    <div id="err_dialog" title="Грамота">
-      <p>Такое могут делать только авторизованные пользователи. 🤔</p>
-    </div>
   </footer>
   <script src="/assets/plg/jQuery/jquery-3.5.1.min.js"></script>
-  <script src="/assets/js/UploadNewBookImageScript.js"></script>
-  <script src="/assets/js/DownloadBookWindowScript.js"></script>
-<!--  <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>-->
 </body></html>
